src/test/ui/parser/pat-ranges-2.stderr
error: expected one of `::`, `:`, `;`, or `=`, found `!`
  --> $DIR/pat-ranges-2.rs:4:26
   |
LL |     let 10 ..= makropulos!() = 12;
   |                          ^ expected one of `::`, `:`, `;`, or `=` here

error: aborting due to previous error

